--- a/PalladiumDwh.Core/PalladiumDwh.Core.csproj
+++ b/PalladiumDwh.Core/PalladiumDwh.Core.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Application\Extracts\Commands\SyncArtFastTrack.cs" />
     <Compile Include="Application\Extracts\Commands\SyncBaseline.cs" />
     <Compile Include="Application\Extracts\Commands\SyncCancerScreening.cs" />
+    <Compile Include="Application\Extracts\Commands\SyncCervicalCancerScreening.cs" />
     <Compile Include="Application\Extracts\Commands\SyncContactListing.cs" />
     <Compile Include="Application\Extracts\Commands\SyncCovid.cs" />
     <Compile Include="Application\Extracts\Commands\SyncDefaulterTracing.cs" />
@@ -99,6 +100,7 @@
     <Compile Include="Application\Extracts\Source\ArtSourceBag.cs" />
     <Compile Include="Application\Extracts\Source\BaselineSourceBag.cs" />
     <Compile Include="Application\Extracts\Source\CancerScreeningSourceBag.cs" />
+    <Compile Include="Application\Extracts\Source\CervicalCancerScreeningsSourceBag.cs" />
     <Compile Include="Application\Extracts\Source\ContactListingSourceBag.cs" />
     <Compile Include="Application\Extracts\Source\CovidSourceBag.cs" />
     <Compile Include="Application\Extracts\Source\DefaulterTracingSourceBag.cs" />
@@ -110,6 +112,7 @@
     <Compile Include="Application\Extracts\Source\Dto\ArtSourceDto.cs" />
     <Compile Include="Application\Extracts\Source\Dto\BaselineSourceDto.cs" />
     <Compile Include="Application\Extracts\Source\Dto\CancerScreeningSourceDto.cs" />
+    <Compile Include="Application\Extracts\Source\Dto\CervicalCancerScreeningsSourceDto.cs" />
     <Compile Include="Application\Extracts\Source\Dto\ContactListingSourceDto.cs" />
     <Compile Include="Application\Extracts\Source\Dto\CovidSourceDto.cs" />
     <Compile Include="Application\Extracts\Source\Dto\DefaulterTracingSourceDto.cs" />
@@ -145,6 +148,7 @@
     <Compile Include="Application\Extracts\Stage\Repositories\IStageArtFastTrackExtractRepository.cs" />
     <Compile Include="Application\Extracts\Stage\Repositories\IStageBaselineExtractRepository.cs" />
     <Compile Include="Application\Extracts\Stage\Repositories\IStageCancerScreeningExtractRepository.cs" />
+    <Compile Include="Application\Extracts\Stage\Repositories\IStageCervicalCancerScreeningExtractRepository.cs" />
     <Compile Include="Application\Extracts\Stage\Repositories\IStageContactListingExtractRepository.cs" />
     <Compile Include="Application\Extracts\Stage\Repositories\IStageCovidExtractRepository.cs" />
     <Compile Include="Application\Extracts\Stage\Repositories\IStageDefaulterTracingExtractRepository.cs" />
@@ -168,6 +172,7 @@
     <Compile Include="Application\Extracts\Stage\StageArtFastTrackExtract.cs" />
     <Compile Include="Application\Extracts\Stage\StageBaselineExtract.cs" />
     <Compile Include="Application\Extracts\Stage\StageCancerScreeningExtract.cs" />
+    <Compile Include="Application\Extracts\Stage\StageCervicalCancerScreeningExtract.cs" />
     <Compile Include="Application\Extracts\Stage\StageContactListingExtract.cs" />
     <Compile Include="Application\Extracts\Stage\StageCovidExtract.cs" />
     <Compile Include="Application\Extracts\Stage\StageDefaulterTracingExtract.cs" />
@@ -203,6 +208,7 @@
     <Compile Include="Interfaces\IAppService.cs" />
     <Compile Include="Interfaces\IArtFastTrackRepository.cs" />
     <Compile Include="Interfaces\ICancerScreeningRepository.cs" />
+    <Compile Include="Interfaces\ICervicalCancerScreeningRepository.cs" />
     <Compile Include="Interfaces\IiitRiskScoresRepository.cs" />
     <Compile Include="Interfaces\ILiveSyncService.cs" />
     <Compile Include="Interfaces\IMessagingReaderService.cs" />
