--- a/PalladiumDwh.DwapiService/PalladiumDwh.DWapiService.csproj
+++ b/PalladiumDwh.DwapiService/PalladiumDwh.DWapiService.csproj
@@ -129,6 +129,7 @@
     <Compile Include="DependencyResolution\IoC.cs" />
     <Compile Include="Job\SyncArtFastTrackJob.cs" />
     <Compile Include="Job\SyncCancerScreeningJob.cs" />
+    <Compile Include="Job\SyncCervicalCancerScreeningJob.cs" />
     <Compile Include="Job\SyncIIITRiskScoresJob.cs" />
     <Compile Include="Job\SyncManifestJob.cs" />
     <Compile Include="Job\SyncDefaulterTracingJob.cs" />
