--- a/PalladiumDwh.Infrastructure/PalladiumDwh.Infrastructure.csproj
+++ b/PalladiumDwh.Infrastructure/PalladiumDwh.Infrastructure.csproj
@@ -278,6 +278,10 @@
     <Compile Include="Migrations\202310291419474_AddedArtFastTrackAndCancerScreening.designer.cs">
       <DependentUpon>202310291419474_AddedArtFastTrackAndCancerScreening.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202311061228415_UpdateCervicalCancer.cs" />
+    <Compile Include="Migrations\202311061228415_UpdateCervicalCancer.designer.cs">
+      <DependentUpon>202311061228415_UpdateCervicalCancer.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Migrations\LiveSeeder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -392,6 +396,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202310291419474_AddedArtFastTrackAndCancerScreening.resx">
       <DependentUpon>202310291419474_AddedArtFastTrackAndCancerScreening.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202311061228415_UpdateCervicalCancer.resx">
+      <DependentUpon>202311061228415_UpdateCervicalCancer.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Seed\MasterFacility.csv" />
   </ItemGroup>
