--- a/PalladiumDwh.DWapi/database.config
+++ b/PalladiumDwh.DWapi/database.config
@@ -1,7 +1,7 @@
 <connectionStrings>
   <add
     name="DWAPICentral"
-    connectionString="Data Source=PAL-5CG136BN1T\SQLEXPRESS;Initial Catalog=DWAPICentral;Persist Security Info=True;User ID=sa;Password=Sydney123;MultipleActiveResultSets=True;Max Pool Size=50000;Pooling=True"
+    connectionString="Data Source=PAL-5CG136BN1T\SQLEXPRESS;Initial Catalog=DWAPICentralDev;Persist Security Info=True;User ID=sa;Password=Sydney123;MultipleActiveResultSets=True;Max Pool Size=50000;Pooling=True"
     providerName="System.Data.SqlClient"
   />
   <add
