--- a/PalladiumDwh.Shared.Data.Tests/database.config
+++ b/PalladiumDwh.Shared.Data.Tests/database.config
@@ -1,7 +1,7 @@
 <connectionStrings>
   <add
     name="DWAPICentral"
-    connectionString="Data Source=.;Initial Catalog=DWAPICentral;Persist Security Info=True;User ID=sa;Password=Sydney123;MultipleActiveResultSets=True;Pooling=True"
+    connectionString="Data Source=.;Initial Catalog=DWAPICentralDev;Persist Security Info=True;User ID=sa;Password=Sydney123;MultipleActiveResultSets=True;Pooling=True"
     providerName="System.Data.SqlClient" 
     />
 </connectionStrings>
