--- a/PalladiumDwh.DWapi/Properties/Settings.settings
+++ b/PalladiumDwh.DWapi/Properties/Settings.settings
@@ -29,6 +29,12 @@
     <Setting Name="WorkerBatchRetention" Type="System.Int32" Scope="Application">
       <Value Profile="(Default)">30</Value>
     </Setting>
+    <Setting Name="CurrentLatestVersion" Type="System.Int32" Scope="Application">
+      <Value Profile="(Default)">3123</Value>
+    </Setting>
+    <Setting Name="DwapiVersionCuttoff" Type="System.Int32" Scope="Application">
+      <Value Profile="(Default)">3120</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
 
