--- a/PalladiumDwh.DWapi/Web.config
+++ b/PalladiumDwh.DWapi/Web.config
@@ -11,6 +11,9 @@
         </sectionGroup>
         <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
         <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="PalladiumDwh.DWapi.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
     </configSections>
     <connectionStrings configSource="database.config" />
     <appSettings>
@@ -129,6 +132,12 @@
             <setting name="WorkerBatchRetention" serializeAs="String">
                 <value>30</value>
             </setting>
+            <setting name="CurrentLatestVersion" serializeAs="String">
+                <value>3123</value>
+            </setting>
+            <setting name="DwapiVersionCuttoff" serializeAs="String">
+                <value>3120</value>
+            </setting>
         </PalladiumDwh.DWapi.Properties.Settings>
     </applicationSettings>
     <quartz>
@@ -156,4 +165,11 @@
             <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.8.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
         </compilers>
     </system.codedom>
+    <userSettings>
+        <PalladiumDwh.DWapi.Properties.Settings>
+            <setting name="DwapiVersionCuttoff" serializeAs="String">
+                <value>0</value>
+            </setting>
+        </PalladiumDwh.DWapi.Properties.Settings>
+    </userSettings>
 </configuration>
