--- a/PalladiumDwh.Infrastructure/PalladiumDwh.Infrastructure.csproj
+++ b/PalladiumDwh.Infrastructure/PalladiumDwh.Infrastructure.csproj
@@ -292,6 +292,10 @@
     <Compile Include="Migrations\202402200653267_AddedDefaulterTracingVariables.designer.cs">
       <DependentUpon>202402200653267_AddedDefaulterTracingVariables.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202402230554335_ChangedChronicOnsetDateToString.cs" />
+    <Compile Include="Migrations\202402230554335_ChangedChronicOnsetDateToString.designer.cs">
+      <DependentUpon>202402230554335_ChangedChronicOnsetDateToString.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Migrations\LiveSeeder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -415,6 +419,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202402200653267_AddedDefaulterTracingVariables.resx">
       <DependentUpon>202402200653267_AddedDefaulterTracingVariables.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202402230554335_ChangedChronicOnsetDateToString.resx">
+      <DependentUpon>202402230554335_ChangedChronicOnsetDateToString.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Seed\MasterFacility.csv" />
   </ItemGroup>
